--- a/manifest.json
+++ b/manifest.json
@@ -12,9 +12,4 @@
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
-}
+      "src":
